@@ -1,0 +1,7 @@
+appliedkernels="2.6.14"
+depends="patch-${appliedkernels}.6"
+patchversion="${depends/patch-/}-grsec"
+source="grsecurity-2.1.8-${depends/patch-/}-200601211647.patch.gz"
+source_url="http://www.grsecurity.net/${source}"
+source_gpg="grsecurity.gpg:${source}.sign:ESTABLISHED_UPSTREAM_KEY"
+gpg_source_url="${source_url}.sign"
