@@ -9,9 +9,9 @@ LATEST_PRE_2_2=patch-2.2.27-pre2
 LATEST_2_0=2.0.40
 LATEST_mm_patches=2.6.16-rc1-mm4
 LATEST_ac_patches=patch-2.6.11-ac7
-LATEST_grsecurity_2_4=grsecurity-2.1.7-2.4.32-200511131857.patch
+LATEST_grsecurity_2_4=grsecurity-2.1.8-2.4.32-200601211647.patch
 LATEST_grsec_secfix_2_4=linux-2.4.28-secfix-200501071141.patch
-LATEST_grsecurity_2_6=grsecurity-2.1.7-2.6.14.3-200511261227.patch
+LATEST_grsecurity_2_6=grsecurity-2.1.8-2.6.14.6-200601211647.patch
 LATEST_grsec_secfix_2_6=linux-2.6.10-secfix-200501071130.patch
 LATEST_nitro_patches=patch-2.6.12-nitro5
 LATEST_ck_patches=patch-2.6.15-ck3
