@@ -1,3 +1,11 @@
+2006-02-01 David Brown <dmlb2000@gmail.com>
+	* latest.defaults: updated latest to grsecurity-2.1.8-2.4.32-200601211647.patch
+	* info/patches/grsecurity_2_4/grsecurity-2.1.8-2.4.32-200601211647.patch: added
+
+2006-02-01 David Brown <dmlb2000@gmail.com>
+	* latest.defaults: updated latest to grsecurity-2.1.8-2.6.14.6-200601211647.patch
+	* info/patches/grsecurity_2_6/grsecurity-2.1.8-2.6.14.6-200601211647.patch: added
+
 2006-01-31 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.15-cks3
 	* info/patches/ck_server_patches/patch-2.6.15-cks3: added
